--- a/src/App.css
+++ b/src/App.css
@@ -15,20 +15,32 @@
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: 10vw 1fr auto;
+    display: flex;
     width: 100vw;
+    height: 96vh;
 }
 
 .files-col {
     display: grid;
+    flex: 0 0 auto;
     grid-template-rows: 1fr auto;
     box-shadow: 2px 0 4px rgba(0, 0, 0, 0.15);
     z-index: 5;
+
+    height: 100%; 
+    overflow-y: auto;
+    min-height: 0;
 }
 
 .status-col {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
     padding: 0.25rem;
     box-shadow: -2px 0 4px rgba(0, 0, 0, 0.15);
-    z-index: 5;    
+    z-index: 5;
+
+    height: 100%; 
+    overflow-y: auto;
+    min-height: 0;
 }
