--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,15 @@
     overflow-y: auto;
     min-height: 0;
 }
+
+.debugLineHighlight {
+    background-color: rgba(255, 0, 0, 0.3);
+}
+
+.debugGlyph {
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-left: 4px;
+}
