--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
     --hex-cursor-highlight: #f8fafd;
     --hex-cursor-inactive-highlight: #5f6673;
     --hex-cursor-selection-background: #c4c4c4;
+    --monaco-debug-highlight: rgba(255, 165, 0, 0.2);
     --border: #cccccc;
 }
 
@@ -27,6 +28,7 @@
     --hex-cursor-highlight: #f8fafd;
     --hex-cursor-inactive-highlight: #b7bcc6;
     --hex-cursor-selection-background: #5f6673;
+    --monaco-debug-highlight: rgba(255, 215, 0, 0.15);
     --border: #3a3a3a;
 }
 
