Display a message when the screen being used is too small to properly display the editor.

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,8 @@
     display: grid;
     place-items: center;
     height: 100vh;
+    padding: 4em;
     color: var(--text);
+    text-align: center;
     background-color: var(--bg); 
 }
